--- a/WHO_Death_Percentage_Calculation/Process/Worldometer/ScrapeDeathsAndTableData.xaml
+++ b/WHO_Death_Percentage_Calculation/Process/Worldometer/ScrapeDeathsAndTableData.xaml
@@ -1,11 +1,11 @@
 <Activity mc:Ignorable="sap sap2010" x:Class="WorldometerScrapingTableData" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
-    <x:Property Name="out_dt_extractTotalDeathsData" Type="OutArgument(sd:DataTable)" />
+    <x:Property sap2010:Annotation.AnnotationText="It holds the scraped table data from worldmeter webpage " Name="out_dt_extractTotalDeathsData" Type="OutArgument(sd:DataTable)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>823.2,894.4</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>824,886</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>WorldometerScrapingTableData_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="31">
@@ -72,18 +72,17 @@
       <AssemblyReference>UiPath.Excel</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities.Design</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Scrape the deaths table data once after reached the countries page." DisplayName="ScrapeDeathsTableData" sap:VirtualizedContainerService.HintSize="516.8,829.6" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Scrape the deaths table data once after reached the countries page." DisplayName="ScrapeDeathsTableData" sap:VirtualizedContainerService.HintSize="518,821" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="475.2,92.8" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Started to scrape the deaths table data&quot;]" />
-    <Sequence DisplayName="Data scraping of total deaths  table data" sap:VirtualizedContainerService.HintSize="475.2,440" sap2010:WorkflowViewState.IdRef="Sequence_10">
+    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="476,91" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Started to scrape the deaths table data&quot;]" />
+    <Sequence DisplayName="Data scraping of total deaths  table data" sap:VirtualizedContainerService.HintSize="476,436" sap2010:WorkflowViewState.IdRef="Sequence_10">
       <Sequence.Variables>
         <Variable x:TypeArguments="sd:DataTable" Default="[New System.Data.DataTable]" Name="ExtractDataTable" />
       </Sequence.Variables>
@@ -93,19 +92,19 @@
           <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'COVIDLive Page'" sap:VirtualizedContainerService.HintSize="433.6,347.2" sap2010:WorkflowViewState.IdRef="BrowserScope_4" InformativeScreenshot="162b58b97390b7d320026f1d0ff17d3e" Selector="&lt;html app='chrome.exe' title='COVID Live - Coronavirus Statistics - Worldometer' /&gt;">
+      <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'COVIDLive Page'" sap:VirtualizedContainerService.HintSize="434,344" sap2010:WorkflowViewState.IdRef="BrowserScope_4" InformativeScreenshot="162b58b97390b7d320026f1d0ff17d3e" Selector="&lt;html app='chrome.exe' title='COVID Live - Coronavirus Statistics - Worldometer' /&gt;">
         <ui:BrowserScope.Body>
           <ActivityAction x:TypeArguments="x:Object">
             <ActivityAction.Argument>
               <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
             </ActivityAction.Argument>
-            <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="375.2,200" sap2010:WorkflowViewState.IdRef="Sequence_9">
+            <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="376,198" sap2010:WorkflowViewState.IdRef="Sequence_9">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <ui:ExtractData DelayBetweenPagesMS="{x:Null}" NextLinkSelector="{x:Null}" ContinueOnError="True" DataTable="[out_dt_extractTotalDeathsData]" DisplayName="Extract the total deaths table data" ExtractMetadata="&lt;extract-table get_columns_name='1' get_empty_columns='1' columns_name_source='Longest'&gt;&lt;column name='#' attr='text' /&gt;&lt;column name='Country,&amp;#xA;Other' attr='text' /&gt;&lt;column name='Total&amp;#xA;Cases' attr='text' /&gt;&lt;column name='New&amp;#xA;Cases' attr='text' /&gt;&lt;column name='Total&amp;#xA;Deaths' attr='text' /&gt;&lt;column name='New&amp;#xA;Deaths' attr='text' /&gt;&lt;column name='Total&amp;#xA;Recovered' attr='text' /&gt;&lt;column name='New&amp;#xA;Recovered' attr='text' /&gt;&lt;column name='Active&amp;#xA;Cases' attr='text' /&gt;&lt;column name='Serious,&amp;#xA;Critical' attr='text' /&gt;&lt;column name='Tot Cases/&amp;#xA;1M pop' attr='text' /&gt;&lt;column name='Deaths/&amp;#xA;1M pop' attr='text' /&gt;&lt;column name='Total&amp;#xA;Tests' attr='text' /&gt;&lt;column name='Tests/&amp;#xA;1M pop' attr='text' /&gt;&lt;column name='Population' attr='text' /&gt;&lt;column name='Continent' attr='text' /&gt;&lt;column name='Column-16' attr='text' /&gt;&lt;column name='Column-17' attr='text' /&gt;&lt;column name='Column-18' attr='text' /&gt;&lt;column name='Column-19' attr='text' /&gt;&lt;column name='Column-20' attr='text' /&gt;&lt;column name='Column-21' attr='text' /&gt;&lt;/extract-table&gt;" sap:VirtualizedContainerService.HintSize="333.6,107.2" sap2010:WorkflowViewState.IdRef="ExtractData_4" MaxNumberOfResults="500" SimulateClick="True">
+              <ui:ExtractData DelayBetweenPagesMS="{x:Null}" NextLinkSelector="{x:Null}" ContinueOnError="True" DataTable="[out_dt_extractTotalDeathsData]" DisplayName="Extract the total deaths table data" ExtractMetadata="&lt;extract-table get_columns_name='1' get_empty_columns='1' columns_name_source='Longest'&gt;&lt;column name='#' attr='text' /&gt;&lt;column name='Country,&amp;#xA;Other' attr='text' /&gt;&lt;column name='Total&amp;#xA;Cases' attr='text' /&gt;&lt;column name='New&amp;#xA;Cases' attr='text' /&gt;&lt;column name='Total&amp;#xA;Deaths' attr='text' /&gt;&lt;column name='New&amp;#xA;Deaths' attr='text' /&gt;&lt;column name='Total&amp;#xA;Recovered' attr='text' /&gt;&lt;column name='New&amp;#xA;Recovered' attr='text' /&gt;&lt;column name='Active&amp;#xA;Cases' attr='text' /&gt;&lt;column name='Serious,&amp;#xA;Critical' attr='text' /&gt;&lt;column name='Tot Cases/&amp;#xA;1M pop' attr='text' /&gt;&lt;column name='Deaths/&amp;#xA;1M pop' attr='text' /&gt;&lt;column name='Total&amp;#xA;Tests' attr='text' /&gt;&lt;column name='Tests/&amp;#xA;1M pop' attr='text' /&gt;&lt;column name='Population' attr='text' /&gt;&lt;column name='Continent' attr='text' /&gt;&lt;column name='Column-16' attr='text' /&gt;&lt;column name='Column-17' attr='text' /&gt;&lt;column name='Column-18' attr='text' /&gt;&lt;column name='Column-19' attr='text' /&gt;&lt;column name='Column-20' attr='text' /&gt;&lt;column name='Column-21' attr='text' /&gt;&lt;/extract-table&gt;" sap:VirtualizedContainerService.HintSize="334,106" sap2010:WorkflowViewState.IdRef="ExtractData_4" MaxNumberOfResults="500" SimulateClick="True">
                 <ui:ExtractData.Target>
                   <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="77674f74-8c13-4c53-9099-25dde6433262" InformativeScreenshot="83511dd0cc961ad85253e6b1d1521c6d" Selector="&lt;webctrl tag='TABLE' /&gt;" WaitForReady="COMPLETE">
                     <ui:Target.TimeoutMS>
@@ -119,7 +118,7 @@
         </ui:BrowserScope.Body>
       </ui:BrowserScope>
     </Sequence>
-    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="475.2,92.8" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;The deaths table data has been scraped successfully&quot;]">
+    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="476,91" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;The deaths table data has been scraped successfully&quot;]">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
